--- a/autenticacao/templates/logar.html
+++ b/autenticacao/templates/logar.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container-fluid ">
             <!-- Logar -->
-            <form class="d-flex justify-content-center flex-wrap" method="POST" action="{% url 'home' %}">
+            <form class="d-flex justify-content-center flex-wrap" method="POST">
                 {% csrf_token %}
                 <div class="col-md-7 col-sm-10 mb-3 ">
                   <label for="InputUsername" class="form-label">Nome de usuario</label>
@@ -29,9 +29,11 @@
                 </div>
                 <div class="col-md-7 col-sm-10 mb-3">
                   <label for="InputPassword" class="form-label">Senha</label>
-                  <input type="senha" class="form-control" id="InputPassword" placeholder="***********">
+                  <input name="senha" type="password" class="form-control" id="InputPassword" placeholder="***********">
                 </div>
-                <div class="col-md-7 col-sm-10"><button type="submit" class="btn btn-primary">Logar</button></div>
+                <div class="col-md-7 col-sm-10">
+                    <input class="btn btn-primary" type="submit" value="Logar">
+                </div>
             </form>
         </div>
             <!-- Logar -->
