--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 {% if user.is_authenticated %}
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#bda41b ;">
   <div class="container-md " id="container-items-navbar">
+    <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static '/img/Logo-Icone-SemFundo.png' %}" alt="Logo da empresa" width="150"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,6 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" id="letra-dark" href="{% url 'contato' %}"><h5>Fale Conosco</h5></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" id="letra-dark" href="{% url 'sair' %}"><h5>Sair </h5></a>
+        </li>
       </ul>
     </div>
   </div>
@@ -42,6 +46,7 @@
      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" ></script>
 
+{% if user.is_authenticated %}
  <footer
          class="text-center text-lg-start text-white mt-5"
          style="background-color: #1c2331"
@@ -144,6 +149,7 @@
    <!-- Copyright -->
  </footer>
  <!-- Footer -->
+ {% endif %}
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" ></script>
