--- a/templates/static/plataforma/css/home.css
+++ b/templates/static/plataforma/css/home.css
@@ -1,5 +1,5 @@
 .bg_navbar{
-    background-color: #30CD9E;
+    background-color: #1C2331;
     }
     .font_logo{
     font-family: 'Courier New', Courier, monospace;
@@ -7,7 +7,7 @@
     display: inline;
     }
     .card_imovel{
-    background-color: #30CD9E;
+    background-color: #1C2331;
     width: 20rem;
     margin-top: 50px;
     border-radius: 26px;
@@ -28,20 +28,20 @@
     .btn_filtrar{
     border: none;
     background-color: transparent;
-    border: 2px solid #30CD9E;
-    color: #30CD9E;
+    border: 2px solid #1C2331;
+    color: #1C2331;
     padding: 5px 10px 5px 10px;
     font-weight: bold;
     }
     .titulo_filtrar{
-    color:#30CD9E;
+    color:#1C2331;
     font-weight: bold;
     font-size: 30px;
     }
     .btn_filtrar_modal{
     border: none;
     color: white;
-    background-color: #30CD9E;
+    background-color: #1C2331;
     font-weight: bold;
     font-size: 20px;
     }
@@ -53,7 +53,7 @@
     color: white;
     }
     .titulo_especificacao{
-    color: #30CD9E;
+    color: #1C2331;
     font-weight: bold;
     margin-top: 20px;
     font-size: 40px;
@@ -67,7 +67,7 @@
     }
     .btn_agendar_visita{
     border: none;
-    background-color: #30CD9E;
+    background-color: #1C2331;
     color: white;
     font-weight: bold;
     font-size: 20px;
@@ -78,7 +78,7 @@
     }
     .btn_agendar{
     border: none;
-    background-color: #30CD9E;
+    background-color: #1C2331;
     color: white;
     font-weight: bold;
     font-size: 20px;
