--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
           <a class="nav-link" id="letra-dark" href="{% url 'contato' %}"><h5>Fale Conosco</h5></a>
         </li>
         <li class="nav-item">
+          <a href="{% url 'anuncie' %}" id="letra-dark" class="nav-link"><h5>Anuncie</h5></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" id="letra-dark" href="{% url 'sair' %}"><h5>Sair </h5></a>
         </li>
       </ul>
