sessão de anuncie inserida

--- a/plataforma/templates/home.html
+++ b/plataforma/templates/home.html
@@ -51,7 +51,7 @@
                   </strong>
                   {% endif %}
 
-                  <strong>{{veiculo.rua}}, {{veiculo.bairro}} <br>{{veiculo.cidade}}</strong>
+                  <strong>{{veiculo.rua}} <br> {{veiculo.bairro}} <br>{{veiculo.cidade}}</strong>
                   <br>
                   <p><strong>Modelo:</strong> {{veiculo.modelo}} <br>
                     <strong>Ano: </strong>{{veiculo.ano}}</p>
