--- a/plataforma/templates/veiculo.html
+++ b/plataforma/templates/veiculo.html
@@ -44,7 +44,7 @@
 
             <div class="col-md">
                 <h3 class="titulo_especificacao">Ano</h3>
-                <p class="especificacao">{{veiculo.ano}}m²</p>
+                <p class="especificacao">{{veiculo.ano}}</p>
             </div>
 
             
