--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                style="width: 60px; background-color: #bda41b; height: 2px"
                />
            <p>
-            Encontre um lar do seu jeito com a gente
+            Encontre um carro do seu jeito
            </p>
          </div>
          <!-- Grid column -->
@@ -153,7 +153,6 @@
  </footer>
  <!-- Footer -->
  {% endif %}
-
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" ></script>
     </body>
