--- a/plataforma/templates/anuncie.html
+++ b/plataforma/templates/anuncie.html
@@ -9,10 +9,49 @@
 
 
 {% block 'body' %}
-<h1>Anuncie</h1>
-<form action="." method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Enviar">
-</form>
+<h1 class="text-center">Anuncie</h1>
+<div class="container" id="formMensagem">
+    <form method="post" action="#">
+        {% csrf_token %}
+        <div class=" form-group">
+            <label class="mt-3" for="modelo">Modelo:</label>
+            <input class="form-control" type="text" id="modelo" name="modelo" placeholder="Modelo" required>
+
+            <label class="mt-3" for="inputValor">Valor:</label>
+            <input class="form-control" type="number" name="valor" id="inputValor" placeholder="10000">
+
+            <label class="mt-3" for="inputKmRodados">km Rodados: </label>
+            <input class="form-control" type="number" name="kmRodados" id="inputKmRodados" placeholder="300">
+
+            <label class="mt-3" for="inputAno">Ano:</label>
+            <input class="form-control" type="number" name="ano" id="inputAno" placeholder="2014">
+
+            <label class="mt-3" for="inputCor">Cor:</label>
+            <input class="form-control" type="text" name="cor" id="inputCor" placeholder="Prata">
+            
+            <label class="mt-3" for="inputCombustivel"> Tipo de combustivel:</label>
+            <select class="form-control" name="tipo_combustivel" id="inputCombustivel">
+                <option value="A">Alcool</option>
+                <option value="G">Gasolina</option>
+                <option value="D">Diesel</option>
+                <option value="F">Flex</option>
+                <option value="E">Elétrico</option>
+            </select>
+
+            <label class="mt-3" for="inputCidade">Cidade:</label>
+            <select name="cidade" for="inputCidade" class="form-control">
+                {% for cidade in cidades %}
+                  <option value="{{cidade.id}}">{{cidade.nome}}</option>
+                {% endfor %}    
+              </select>
+
+            <label class="mt-3" for="inputTelefone"> Telefone:</label>
+            <input class="form-control" type="number" name="telefone" id="inputTelefone" placeholder="33 98888-8888">
+            
+            <label class="mt-3" for="subject"> Descrição </label>
+            <textarea class="form-control" name="descricao" id="subject" cols="30" rows="10" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+</div>
 {% endblock %}
