--- a/plataforma/templates/anuncie.html
+++ b/plataforma/templates/anuncie.html
@@ -14,6 +14,7 @@
     <form method="post" action="#">
         {% csrf_token %}
         <div class=" form-group">
+            
             <label class="mt-3" for="modelo">Modelo:</label>
             <input class="form-control" type="text" id="modelo" name="modelo" placeholder="Modelo" required>
 
@@ -39,17 +40,29 @@
             </select>
 
             <label class="mt-3" for="inputCidade">Cidade:</label>
-            <select name="cidade" for="inputCidade" class="form-control">
-                {% for cidade in cidades %}
-                  <option value="{{cidade.id}}">{{cidade.nome}}</option>
-                {% endfor %}    
-              </select>
+            <input class="form-control" type="text" name="cidade" id="inputCidade" placeholder="Itamarandiba">
 
             <label class="mt-3" for="inputTelefone"> Telefone:</label>
             <input class="form-control" type="number" name="telefone" id="inputTelefone" placeholder="33 98888-8888">
             
-            <label class="mt-3" for="subject"> Descrição </label>
-            <textarea class="form-control" name="descricao" id="subject" cols="30" rows="10" required></textarea>
+            <label class="mt-3" for="subject"> Descrição: </label>
+            <input class="form-control" type="text" name="descricao" id="subject" ></input>
+
+            <label class="mt-3" for="inputBairro ">Bairro:</label>
+            <input class="form-control" name="bairro" id="inputBairro" type="text">
+
+            <label class="mt-3" for="inputRua" >Rua:</label>
+            <input class="form-control" type="text" name="rua" id="inputRua">
+
+            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
+            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input> <br>
+
+            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
+            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input>  <br>
+
+            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
+            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input>  <br>
+
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
