--- a/templates/static/plataforma/css/home.css
+++ b/templates/static/plataforma/css/home.css
@@ -14,6 +14,7 @@
     }
     .img_capa_imovel{
     width: 100%;
+    height: 15rem;
     border-top-left-radius: 26px;
     border-top-right-radius: 26px;
     }
