--- a/plataforma/templates/anuncie.html
+++ b/plataforma/templates/anuncie.html
@@ -11,7 +11,7 @@
 {% block 'body' %}
 <h1 class="text-center">Anuncie</h1>
 <div class="container" id="formMensagem">
-    <form method="post" action="#">
+    <form method="post" action="#" enctype="multipart/form-data">
         {% csrf_token %}
         <div class=" form-group">
             
@@ -54,14 +54,14 @@
             <label class="mt-3" for="inputRua" >Rua:</label>
             <input class="form-control" type="text" name="rua" id="inputRua">
 
-            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
-            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input> <br>
+            <label class="mt-3" for="inputImagens1">Coloque a primeira imagem: </label><br>
+            <input type="file" name="img1" id="">
 
-            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
-            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input>  <br>
+            <label class="mt-3" for="inputImagens2">Coloque a segundaimagem: </label><br>
+            <input type="file" name="img2" id="">
 
-            <label class="mt-3" for="inputImagens">Coloque a primeira imagem: </label><br>
-            <input type="file" src="media/" name="arquivos" class="btn btn-dark" id="inputImagens"  accept="image/png, image/jpeg"></input>  <br>
+            <label class="mt-3" for="inputImagens3">Coloque a terceira imagem: </label><br>
+            <input type="file" name="img3" id="">
 
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
