Consertando alguns links

--- a/plataforma/templates/home.html
+++ b/plataforma/templates/home.html
@@ -7,14 +7,16 @@
 {% block 'title' %}Página Inicial{% endblock %}
 {% block 'body' %}
 <div class="container-fluid d-flex justify-content-center align-items-center"  id="img-car-logo">
-  <form action="{% url 'pesquisa' %}" method="POST" >
-    {% csrf_token %}
-    <div class="container d-flex flex-nowrap">
-      <input type="text" class="form-control" name="pesquisa"  placeholder="Search" id="input-pesquisa">
-      <button class="btn btn-dark" type="submit" id="botao-pesquisa"> <img src="{% static '/img/lupa.png' %}" alt="icone-lupa" id="lupa">
-      </button>
-    </div>
-  </form>
+  <div class="col-md-5">
+    <form action="{% url 'pesquisa' %}" method="POST" >
+      {% csrf_token %}
+      <div class="container d-flex flex-nowrap">
+        <input type="text" class="form-control" name="pesquisa"  placeholder="Search" id="input-pesquisa">
+        <button class="btn btn-dark" type="submit" id="botao-pesquisa"> <img src="{% static '/img/lupa.png' %}" alt="icone-lupa" id="lupa">
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
 <div class="container mt-2 ">  
   <br>
