--- a/plataforma/templates/anuncie.html
+++ b/plataforma/templates/anuncie.html
@@ -55,13 +55,13 @@
             <input class="form-control" type="text" name="rua" id="inputRua">
 
             <label class="mt-3" for="inputImagens1">Coloque a primeira imagem: </label><br>
-            <input type="file" name="img1" id="">
+            <input type="file" name="img1" id=""><br>
 
-            <label class="mt-3" for="inputImagens2">Coloque a segundaimagem: </label><br>
-            <input type="file" name="img2" id="">
+            <label class="mt-3" for="inputImagens2">Coloque a segunda imagem: </label><br>
+            <input type="file" name="img2" id=""><br>
 
             <label class="mt-3" for="inputImagens3">Coloque a terceira imagem: </label><br>
-            <input type="file" name="img3" id="">
+            <input type="file" name="img3" id=""><br>
 
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
