--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
      <!-- JavaScript -->
      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" ></script>
-
+     <script src="{% static '/js/bootstrap.bundle.min.js' %}"></script>
 {% if user.is_authenticated %}
  <footer
          class="text-center text-lg-start text-white mt-5"
@@ -108,13 +108,13 @@
                style="width: 60px; background-color: #bda41b; height: 2px"
                />
            <p>
-             <a href="#!" class="text-white">Sobre nós</a>
+             <a href="{% url 'sobre' %}" class="text-white">Sobre nós</a>
            </p>
            <p>
-             <a href="#!" class="text-white">Página inicial</a>
+             <a href="{% url 'home' %}" class="text-white">Página inicial</a>
            </p>
            <p>
-             <a href="#!" class="text-white">Fale Conosco</a>
+             <a href="{% url 'contato' %}" class="text-white">Contato</a>
            </p>
          </div>
          <!-- Grid column -->
