adicionando telefone do dono

--- a/plataforma/templates/veiculo.html
+++ b/plataforma/templates/veiculo.html
@@ -46,20 +46,24 @@
                 <h3 class="titulo_especificacao">Ano</h3>
                 <p class="especificacao">{{veiculo.ano}}</p>
             </div>
-
-            
-
         </div>
         <br>
         <br>
+
         <div style="text-align: left">
             <h3 class="titulo_especificacao">Endereço</h3>
             <p class="especificacao_endereco">{{veiculo.rua}}, {{veiculo.cidade }}</p>
         </div>
-
         <br>
+
         <div style="text-align: left">
-            <h3 class="titulo_especificacao">descricao</h3>
+            <h3 class="titulo_especificacao">Telefone do proprietário</h3>
+            <p class="especificacao_endereco">{{veiculo.telefone}}</p>
+        </div>      
+        <br>
+
+        <div style="text-align: left">
+            <h3 class="titulo_especificacao">Descricao</h3>
             <p class="especificacao_endereco">{{veiculo.descricao}}</p>
         </div>
 
